test_src/compiler_errors/types/auto/AutoError4.b
class AutoError3 {
    auto test() {
        return 1;
    }
}
